# snapml-examples

./: .gitignore  README.md  environment.yml  environment_z.yml  requirements.txt
examples/: run_all_notebooks.py
examples/accuracy/boosting_machine/: example_credit_card_fraud.ipynb  example_m5_forecasting.ipynb  example_quantile_regression.ipynb
examples/cppapi/: CMakeLists.txt  README.md
examples/cppapi/data/: README.md  train_data.csv
examples/cppapi/gen-models/: gen-models.py
examples/cppapi/include/: Dataset.h
examples/cppapi/models/: model.json  model.pmml
examples/cppapi/src/: Dataset.cpp  capi-booster-example.cpp  capi-dt-example.cpp  capi-rf-example.cpp
examples/datasets/: __init__.py  allstate.py  avazu.py  credit_card_fraud.py  criteo_kaggle.py  dataset.py  epsilon.py  higgs.py  m5_forecasting.py  mnist8m.py  susy.py
examples/datasets/graph-feature-preprocessor/: aml_custom_test.txt  aml_custom_train.txt
examples/graph-feature-preprocessor/: graph-feature-preprocessor.ipynb
examples/graph_feature_preprocessor/: graph_feature_preprocessor.ipynb
examples/incremental_learning/: batched_tree_ensemble.ipynb
examples/inference/random_forest/: example_credit_card_fraud.ipynb
examples/training/decision_tree/: example_allstate.ipynb  example_credit_card_fraud.ipynb  example_creditcard.ipynb  example_epsilon.ipynb  example_higgs.ipynb  example_susy.ipynb
examples/training/logistic_regression/: CriteoKaggle.ipynb  LogisticRegression.ipynb  example_allstate.ipynb  example_avazu.ipynb  (+4 more)
examples/utils/: __init__.py  system_utils.py
(+17 files in other folders)
